--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ OUTPUT_TOPIC=stock_trades
 DEAD_LETTER_TOPIC=stock_trades_dlq
 SASL_USERNAME=your_username
 SASL_PASSWORD=your_password
+MAX_RETRIES=3
+SASL_MECHANISM=SCRAM-SHA-512
