--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-KAFKA_BROKER=localhost:9092
-OUTPUT_TOPIC=stock_trades
-DEAD_LETTER_TOPIC=stock_trades_dlq
-SASL_USERNAME=your_username
-SASL_PASSWORD=your_password
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+KAFKA_TOPIC=stock_topic
+DEAD_LETTER_TOPIC=stock_topic_dlq
+SASL_PLAIN_USERNAME=your_username
+SASL_PLAIN_PASSWORD=your_password
 MAX_RETRIES=3
 SASL_MECHANISM=SCRAM-SHA-512
+RETRY_BACKOFF_MS=1000
+SECURITY_PROTOCOL=SASL_PLAINTEXT
